--- a/wordlist.html
+++ b/wordlist.html
@@ -37,6 +37,7 @@
         <th>Pinyin</th>
         <th>Zhuyin</th>
         <th>Definition</th>
+        <th>Usage</th>
         <th>Notes</th>
     </tr>
     </thead>
@@ -79,6 +80,10 @@
             <div class="form-group">
                 <label for="definition" class="col-form-label">Definition:</label>
                 <input type="text" disabled class="form-control" id="definition">
+            </div>
+            <div class="form-group">
+                <label for="usage" class="col-form-label">Usage:</label>
+                <input type="text" disabled class="form-control" id="usage">
             </div>
             <div class="form-group">
               <label for="notes" class="col-form-label">Notes:</label>
