Add save all button in word list.

--- a/wordlist.html
+++ b/wordlist.html
@@ -49,7 +49,8 @@
 </div>
 
 <a hidden id="savelink" download="Zhongwen-Words.txt"></a>
-<button class="btn btn-success" id="saveList">Save selected rows</button>
+<button class="btn btn-success" id="saveAll">Save all rows</button>
+<button class="btn btn-info" id="saveList">Save selected rows</button>
 
 <div class="btn-group">
     <button class="btn btn-secondary" id="selectAll">Select all rows</button>
